--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Talkie</title>
+    <title>$OG_TITLE</title>
+    <meta name="description" content="Talkie is a site to explore movies and its details." />
+    <meta property="og:description" content="Talkie is a site to explore movies and its details." />
+    <meta name="image" content="https://talkie.appybot.in/favicon.ico" />
+    <meta property="og:image" content="https://talkie.appybot.in/favicon.ico" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
