--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,38 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>$OG_TITLE</title>
-    <meta name="description" content="Talkie is a site to explore movies and its details." />
-    <meta property="og:description" content="Talkie is a site to explore movies and its details." />
-    <meta name="image" content="https://talkie.appybot.in/favicon.ico" />
-    <meta property="og:image" content="https://talkie.appybot.in/favicon.ico" />
+    <title>Talkie</title>
+    <meta
+        name="keywords"
+        content="Movies, TV Shows, Actors, Actresses, Photos, User Ratings, Synopsis, Trailers, Teasers, Credits, Cast"
+      ></meta>
+      <meta
+        name="og:description"
+        content="Talkie is a site to explore movies and its details. Powered by TMDB."
+      />
+      <meta
+        name="description"
+        content="Talkie is a site to explore movies and its details. Powered by TMDB."
+      />
+      
+      <meta name="mobile-web-app-capable" content="yes"></meta>
+      <meta name="apple-mobile-web-app-capable" content="yes"></meta>
+      <meta name="HandheldFriendly" content="True"></meta>
+      <meta name="MobileOptimized" content="320"></meta>
+      <meta name="theme-color" content="#c62828"></meta>
+      <link rel="apple-touch-icon" sizes="180x180" href="/favicon.ico" />
+      <link rel="shortcut icon" type="image/icon" href="/favicon.ico" />
+      <link
+        rel="icon"
+        type="image/png"
+        href="/favicon.ico"
+        sizes="32x32"
+      ></link>
+      <meta name="image" content="https://talkie.appybot.in/favicon.ico" />
+      <meta
+        property="og:image"
+        content="https://talkie.appybot.in/favicon.ico"
+      />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
