Meta Data Fixes

--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,11 @@
       ></meta>
       <meta
         name="og:description"
-        content="Talkie is a site to explore movies and its details. Powered by TMDB."
+        content="Talkie is a site to explore movies. Powered by TMDB."
       />
       <meta
         name="description"
-        content="Talkie is a site to explore movies and its details. Powered by TMDB."
+        content="Talkie is a site to explore movies. Powered by TMDB."
       />
       
       <meta name="mobile-web-app-capable" content="yes"></meta>
